test262: test262/test/language/literals/regexp/u-dec-esc.js https://bugs.webkit.org/show_bug.cgi?id=170687

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-04-12
Reviewed by Michael Saboff.

JSTests:

* test262.yaml:

Source/JavaScriptCore:

* yarr/YarrParser.h:
(JSC::Yarr::Parser::parseEscape):
* yarr/YarrPattern.cpp:
(JSC::Yarr::YarrPattern::errorMessage):
(JSC::Yarr::YarrPattern::compile):
* yarr/YarrPattern.h:
In unicoe patterns, invalid backreferences are an error.

LayoutTests:

* js/regexp-unicode-expected.txt:
* js/script-tests/regexp-unicode.js:
Extend test to test invalid backreferences.

Canonical link: https://commits.webkit.org/187729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215311 268f45cc-cd09-0410-ab3c-d52691b4dbfc